--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="home" data-role="page">
     <div data-role="header" data-position="fixed">
       <h3>人臉辨識</h3> 
-      <a class="ui-btn ui-btn-left" a href="#page1">Back</a>
+      <a class="ui-btn ui-btn-left" a href="file:///C:/Users/user/Desktop/0321/index.html">Back</a>
     </div>
     <div role="main" class="ui-content">
       <div id="gk-310eD4c" is="face-detection" src="http://n.sinaimg.cn/transform/20141104/cfkptvx4230424.jpg" alt="sample.png"></div>
